<resources>
    <string name="app_name">Protocol Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Title</string>
    <string name="nav_header_subtitle">Subtitle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Your Studies</string>
    <string name="menu_createstudy">Create a Study</string>
    <string name="menu_loadstudy">Load Study from QR Code</string>
    <string name="menu_studydetail">Study Details</string>
    <string name="studyname">Study Name</string>
    <string name="region">Region</string>
    <string name="bucket">Bucket</string>
    <string name="folder">Folder</string>
    <string name="saveNewStudy">Save New Study</string>
    <string name="saveEditStudy">Save Study</string>
    <string name="qrError">Detector failed to set up.</string>
    <string name="qrProcess">Process</string>
    <string name="sendToWatch">Save and Send to Watch</string>
    <string name="idDisplay">Study ID: %s</string>
    <string name="deleteButton">Delete Study</string>
    <string name="probesText">Probes</string>
    <string name="remoteText">Remote Storage Settings</string>
    <string-array name="regions">
        <item>us-east-1</item>
        <item>us-east-2</item>
        <item>us-west-1</item>
        <item>us-west-2</item>
        <item>ap-east-1</item>
        <item>ap-south-1</item>
        <item>ap-northeast-1</item>
        <item>ap-northeast-2</item>
        <item>ap-northeast-3</item>
        <item>ap-southeast-1</item>
        <item>ap-southeast-2</item>
        <item>ca-central-1</item>
        <item>eu-central-1</item>
        <item>eu-west-1</item>
        <item>eu-west-2</item>
        <item>eu-west-3</item>
        <item>eu-north-1</item>
        <item>me-south-1</item>
        <item>sa-east-1</item>
    </string-array>
    <string name="accelerometer">Accelerometer</string>
    <string name="ambientLight">Ambient Light</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="breath">Breath</string>
    <string name="compass">Compass</string>
    <string name="gps">GPS</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="hr">HR</string>
    <string name="linearAcceleration">Linear Acceleration</string>
    <string name="offBody">Off Body</string>
    <string name="posture">Posture</string>
    <string name="ppg">PPG</string>
    <string name="sleep">Sleep</string>
    <string name="stepCount">Step Count</string>
    <string name="context_edit">Edit Study</string>
    <string name="context_delete">Delete Study</string>
    <string name="context_share">Share Study</string>
    <string name="context_send">Send to Watch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
