<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_createstudy" />

            <EditText
                android:id="@+id/studyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/studyname"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/studyID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/probesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/probesText" />

            <Switch
                android:id="@+id/accelerometerSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accelerometer" />

            <Switch
                android:id="@+id/ambientLightSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ambientLight" />

            <Switch
                android:id="@+id/bluetoothSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth" />

            <Switch
                android:id="@+id/breathSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breath" />

            <Switch
                android:id="@+id/compassSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compass" />

            <Switch
                android:id="@+id/gpsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gps" />

            <Switch
                android:id="@+id/gyroscopeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gyroscope" />

            <Switch
                android:id="@+id/hrSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hr" />

            <Switch
                android:id="@+id/linearAccelerationSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linearAcceleration" />

            <Switch
                android:id="@+id/offBodySwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/offBody" />

            <Switch
                android:id="@+id/postureSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posture" />

            <Switch
                android:id="@+id/ppgSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ppg" />

            <Switch
                android:id="@+id/sleepSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sleep" />

            <Switch
                android:id="@+id/stepCountSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stepCount" />

            <TextView
                android:id="@+id/remoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/remoteText" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/regions" />

            <EditText
                android:id="@+id/bucketText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bucket"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/folderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/folder"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:id="@+id/saveNewStudyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/saveNewStudy" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>